@@ -9436,6 +9436,117 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testLegalbutVeryLargePositions
+specifier|public
+name|void
+name|testLegalbutVeryLargePositions
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|Token
+name|t1
+init|=
+operator|new
+name|Token
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|t1
+operator|.
+name|setPositionIncrement
+argument_list|(
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|-
+literal|500
+argument_list|)
+expr_stmt|;
+name|TokenStream
+name|overflowingTokenStream
+init|=
+operator|new
+name|CannedTokenStream
+argument_list|(
+operator|new
+name|Token
+index|[]
+block|{
+name|t1
+block|}
+argument_list|)
+decl_stmt|;
+name|Field
+name|field
+init|=
+operator|new
+name|TextField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|overflowingTokenStream
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
